--- a/env/includes/unreal/settings/tk-multi-publish2.yml
+++ b/env/includes/unreal/settings/tk-multi-publish2.yml
@@ -10,23 +10,23 @@ includes:
 - ../../app_locations.yml
 
 settings.tk-multi-publish2.unreal.project:
-  collector: "{self}/collector.py:{engine}/tk-multi-publish2/basic/collector.py"
+  collector: "{config}/tk-multi-publish2/unreal/collector.py:{engine}/tk-multi-publish2/basic/collector.py"
   publish_plugins:
   - name: Publish to ShotGrid
-    hook: "{self}/publish_file.py"
+    hook: "{config}/tk-multi-publish2/unreal/publish_file.py"
     settings: {}
   - name: Upload for review
     hook: "{self}/upload_version.py"
     settings: {}
   - name: Publish to ShotGrid
-    hook: "{self}/publish_file.py:{engine}/tk-multi-publish2/basic/publish_session.py"
+    hook: "{config}/tk-multi-publish2/unreal/publish_file.py:{engine}/tk-multi-publish2/basic/publish_session.py"
     settings: {}
   - name: Export FBX and Publish to ShotGrid
-    hook: "{self}/publish_file.py:{engine}/tk-multi-publish2/basic/publish_asset.py"
+    hook: "{config}/tk-multi-publish2/unreal/publish_file.py:{engine}/tk-multi-publish2/basic/publish_asset.py"
     settings:
         Publish Template: unreal.asset_publish
   - name: Render Movie and Submit for Review
-    hook: "{self}/publish_file.py:{engine}/tk-multi-publish2/basic/publish_movie.py"
+    hook: "{config}/tk-multi-publish2/unreal/publish_file.py:{engine}/tk-multi-publish2/basic/publish_movie.py"
     settings:
         Publish Template: unreal.movie_publish
   help_url: *help_url
