settings.tk-multi-publish2.unreal.project: "@settings.tk-multi-publish2.unreal.project"

--- a/env/includes/settings/tk-multi-publish2.yml
+++ b/env/includes/settings/tk-multi-publish2.yml
@@ -588,3 +588,5 @@ settings.tk-multi-publish2.vred.asset_step:
   post_phase: "{self}/post_phase.py:{config}/tk-multi-publish2/post_phase.py"
   help_url: *help_url
   location: "@apps.tk-multi-publish2.location"
+
+settings.tk-multi-publish2.unreal.project: "@settings.tk-multi-publish2.unreal.project"
