{self}publish_file.py로 수정

--- a/env/includes/settings/tk-multi-publish2.yml
+++ b/env/includes/settings/tk-multi-publish2.yml
@@ -596,20 +596,20 @@ settings.tk-multi-publish2.unreal.project:
   collector: "{config}/tk-multi-publish2/unreal/collector.py:{engine}/tk-multi-publish2/basic/collector.py"
   publish_plugins:
   - name: Publish to ShotGrid
-    hook: "{config}/tk-multi-publish2/unreal/publish_file.py"
+    hook: "{self}/publish_file.py"
     settings: {}
   - name: Upload for review
     hook: "{self}/upload_version.py"
     settings: {}
   - name: Publish to ShotGrid
-    hook: "{config}/tk-multi-publish2/unreal/publish_file.py:{engine}/tk-multi-publish2/basic/publish_session.py"
+    hook: "{self}/publish_file.py:{engine}/tk-multi-publish2/basic/publish_session.py"
     settings: {}
   - name: Export FBX and Publish to ShotGrid
-    hook: "{config}/tk-multi-publish2/unreal/publish_file.py:{engine}/tk-multi-publish2/basic/publish_asset.py"
+    hook: "{self}/publish_file.py:{engine}/tk-multi-publish2/basic/publish_asset.py"
     settings:
         Publish Template: unreal.asset_publish
   - name: Render Movie and Submit for Review
-    hook: "{config}/tk-multi-publish2/unreal/publish_file.py:{engine}/tk-multi-publish2/basic/publish_movie.py"
+    hook: "{self}/publish_file.py:{engine}/tk-multi-publish2/basic/publish_movie.py"
     settings:
         Publish Template: unreal.movie_publish
   help_url: *help_url
