--- a/env/includes/settings/tk-multi-publish2.yml
+++ b/env/includes/settings/tk-multi-publish2.yml
@@ -593,7 +593,7 @@ settings.tk-multi-publish2.vred.asset_step:
 
 # project
 settings.tk-multi-publish2.unreal.project:
-  collector: "{config}/tk-multi-publish2/unreal/collector.py:{engine}/tk-multi-publish2/basic/collector.py"
+  collector: "{self}/collector.py:{config}/tk-multi-publish2/unreal/collector.py"
   publish_plugins:
   - name: Publish to ShotGrid
     hook: "{self}/publish_file.py"
@@ -602,14 +602,14 @@ settings.tk-multi-publish2.unreal.project:
     hook: "{self}/upload_version.py"
     settings: {}
   - name: Publish to ShotGrid
-    hook: "{self}/publish_file.py:{engine}/tk-multi-publish2/basic/publish_session.py"
+    hook: "{self}/publish_file.py:{config}/tk-multi-publish2/unreal/publish_session.py"
     settings: {}
   - name: Export FBX and Publish to ShotGrid
-    hook: "{self}/publish_file.py:{engine}/tk-multi-publish2/basic/publish_asset.py"
+    hook: "{self}/publish_file.py:{config}/tk-multi-publish2/unreal/publish_asset.py"
     settings:
         Publish Template: unreal.asset_publish
   - name: Render Movie and Submit for Review
-    hook: "{self}/publish_file.py:{engine}/tk-multi-publish2/basic/publish_movie.py"
+    hook: "{self}/publish_file.py:{config}/tk-multi-publish2/unreal/publish_movie.py"
     settings:
         Publish Template: unreal.movie_publish
   help_url: *help_url
