--- a/env/includes/settings/tk-maya.yml
+++ b/env/includes/settings/tk-maya.yml
@@ -72,8 +72,10 @@ settings.tk-maya.project:
     tk-multi-screeningroom: "@settings.tk-multi-screeningroom.rv"
     tk-multi-shotgunpanel: "@settings.tk-multi-shotgunpanel"
     tk-multi-workfiles2: "@settings.tk-multi-workfiles2.launch_at_startup"
+    tk-multi-publish2: "@settings.tk-multi-publish2.maya.asset_step.unreal"
   menu_favourites:
   - {app_instance: tk-multi-workfiles2, name: File Open...}
+  - {app_instance: tk-multi-publish2, name: Publish...}
   location: "@engines.tk-maya.location"
 
 # sequence
