--- a/env/includes/unreal/settings/tk-unreal.yml
+++ b/env/includes/unreal/settings/tk-unreal.yml
@@ -27,8 +27,12 @@ settings.tk-unreal.project:
       location: "@apps.tk-multi-pythonconsole.location"
     tk-multi-shotgunpanel: "@settings.tk-multi-shotgunpanel.unreal"
   location: "@tk-unreal.location"
-  menu_favourites: []
+  menu_favourites:
+  - {app_instance: tk-multi-loader2, name: 'Flow Production Tracking Loader...'}
+  - {app_instance: tk-multi-publish2, name: 'Publish...'}
+  - {app_instance: tk-multi-shotgunpanel, name: 'Shotgun Panel...'}
+  - {app_instance: tk-multi-pythonconsole, name: 'Flow Production Tracking Python Console...'}
   run_at_startup:
   - {app_instance: tk-multi-shotgunpanel, name: ''}
-  launch_builtin_plugins: [basic]
+  launch_builtin_plugins: []
   automatic_context_switch: false
