--- a/env/includes/unreal/settings/tk-unreal.yml
+++ b/env/includes/unreal/settings/tk-unreal.yml
@@ -28,10 +28,10 @@ settings.tk-unreal.project:
     tk-multi-shotgunpanel: "@settings.tk-multi-shotgunpanel.unreal"
   location: "@tk-unreal.location"
   menu_favourites:
-  - {app_instance: tk-multi-loader2, name: 'Flow Production Tracking Loader...'}
-  - {app_instance: tk-multi-publish2, name: 'Publish...2'}
+  - {app_instance: tk-multi-loader2, name: 'Loader...'}
+  - {app_instance: tk-multi-publish2, name: 'Publish...'}
   - {app_instance: tk-multi-shotgunpanel, name: 'Shotgun Panel...'}
-  - {app_instance: tk-multi-pythonconsole, name: 'Flow Production Tracking Python Console...'}
+  - {app_instance: tk-multi-pythonconsole, name: 'Python Console...'}
   run_at_startup:
   - {app_instance: tk-multi-shotgunpanel, name: ''}
   launch_builtin_plugins: []
