--- a/env/includes/unreal/settings/tk-unreal.yml
+++ b/env/includes/unreal/settings/tk-unreal.yml
@@ -26,8 +26,12 @@ settings.tk-unreal.project:
     tk-multi-pythonconsole:
       location: "@apps.tk-multi-pythonconsole.location"
     tk-multi-shotgunpanel: "@settings.tk-multi-shotgunpanel.unreal"
+    tk-multi-workfiles2: "@settings.tk-multi-workfiles2.location"
   location: "@tk-unreal.location"
   menu_favourites:
+  - {app_instance: tk-multi-workfiles2, name: 'File Open...'}
+  - {app_instance: tk-multi-workfiles2, name: 'File Save...'}
+  - {app_instance: tk-multi-loader2, name: 'Load...'}
   - {app_instance: tk-multi-publish2, name: 'Publish...'}
   run_at_startup:
   - {app_instance: tk-multi-shotgunpanel, name: ''}
